2010-01-13  Adam Barth  <abarth@webkit.org>

        Unreviewed.  Turn the mac-ews status bubbles back on now that this bot
        is running again.

        * QueueStatusServer/templates/statusbubble.html:

2010-01-13  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        REGRESSION(53133): webkit-patch land dies if it can't find a bug id.
        https://bugs.webkit.org/show_bug.cgi?id=33634

        Deal with the case of no bug patch object in the state.

        * Scripts/webkitpy/steps/updatechangelogswithreview_unittests.py:
        * Scripts/webkitpy/steps/updatechangelogswithreviewer.py:

2010-01-13  Kenneth Russell  <kbr@google.com>

        Unreviewed; added myself to the committers list.

        * Scripts/webkitpy/committers.py:

2010-01-13  Darin Adler  <darin@apple.com>

        Ignore compiled Python in more of webkitpy.

        * Scripts/webkitpy/commands: Added property svn:ignore.
        * Scripts/webkitpy/steps: Added property svn:ignore.
        * Scripts/webkitpy/style: Added property svn:ignore.

2010-01-13  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix build problem related to the pushd command

        * Scripts/webkitdirs.pm:

2010-01-13  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Split the build process in two different .pro files.
        This allows qmake to be run once all source files are available.

        * Scripts/webkitdirs.pm: Add calls to make DerivedSources.pro in JSC and WC.

2010-01-13  Shinichiro Hamaji  <hamaji@chromium.org>

        Unreviewed tiny typo fix in docstrings.

        * Scripts/webkitpy/style/checker_unittest.py:

2010-01-13  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Shinichiro Hamaji.

        Created a CategoryFilter class to encapsulate the logic of
        filter rules.

        https://bugs.webkit.org/show_bug.cgi?id=33454
