@@ -46,6 +46,7 @@ from webkitpy.multicommandtool_unittest import *
 from webkitpy.networktransaction_unittest import *
 from webkitpy.queueengine_unittest import *
 from webkitpy.steps.steps_unittest import *
+from webkitpy.steps.closebugforlanddiff_unittest import *
 from webkitpy.steps.updatechangelogswithreview_unittests import *
 from webkitpy.style.unittests import * # for check-webkit-style
 from webkitpy.webkit_logging_unittest import *
